; ModuleID = '/home/carl/AnghaBench/twemproxy/src/extr_nc_message.c_msg_deinit.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/extr_nc_message.c_msg_deinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.msg = type { i32 }

@free_msgq = common dso_local global i32 0, align 4
@nfree_msgq = common dso_local global i64 0, align 8
@m_tqe = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @msg_deinit() #0 {
  %1 = alloca %struct.msg*, align 8
  %2 = alloca %struct.msg*, align 8
  %3 = call %struct.msg* @TAILQ_FIRST(i32* @free_msgq)
  store %struct.msg* %3, %struct.msg** %1, align 8
  br label %4

4:                                                ; preds = %17, %0
  %5 = load %struct.msg*, %struct.msg** %1, align 8
  %6 = icmp ne %struct.msg* %5, null
  br i1 %6, label %7, label %21

7:                                                ; preds = %4
  %8 = load i64, i64* @nfree_msgq, align 8
  %9 = icmp sgt i64 %8, 0
  %10 = zext i1 %9 to i32
  %11 = call i32 @ASSERT(i32 %10)
  %12 = load %struct.msg*, %struct.msg** %1, align 8
  %13 = load i32, i32* @m_tqe, align 4
  %14 = call %struct.msg* @TAILQ_NEXT(%struct.msg* %12, i32 %13)
  store %struct.msg* %14, %struct.msg** %2, align 8
  %15 = load %struct.msg*, %struct.msg** %1, align 8
  %16 = call i32 @msg_free(%struct.msg* %15)
  br label %17

17:                                               ; preds = %7
  %18 = load %struct.msg*, %struct.msg** %2, align 8
  store %struct.msg* %18, %struct.msg** %1, align 8
  %19 = load i64, i64* @nfree_msgq, align 8
  %20 = add nsw i64 %19, -1
  store i64 %20, i64* @nfree_msgq, align 8
  br label %4

21:                                               ; preds = %4
  %22 = load i64, i64* @nfree_msgq, align 8
  %23 = icmp eq i64 %22, 0
  %24 = zext i1 %23 to i32
  %25 = call i32 @ASSERT(i32 %24)
  ret void
}

declare dso_local %struct.msg* @TAILQ_FIRST(i32*) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local %struct.msg* @TAILQ_NEXT(%struct.msg*, i32) #1

declare dso_local i32 @msg_free(%struct.msg*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
